compartmentalized active store id

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL="<YOUR_STORE_URL>"
+ACTIVE_STORE_ID="9d4e8e69-xxxx-xxxx-xxxx-f1d3bc1617e2"
 OVERVIEW_BILLBOARD_ID="5fdb4c00-xxx-xxxx-xxxx-4e3e7be51fbb"
